--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -890,6 +890,10 @@ video {
   margin-top: auto;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .block {
   display: block;
 }
@@ -988,6 +992,14 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-3\.5 {
+  height: 0.875rem;
 }
 
 .max-h-80 {
@@ -1161,6 +1173,30 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-3\.5 {
+  width: 0.875rem;
+}
+
+.w-7 {
+  width: 1.75rem;
+}
+
+.w-9 {
+  width: 2.25rem;
 }
 
 .min-w-0 {
@@ -1631,6 +1667,11 @@ video {
   border-color: rgb(139 145 151 / 0.8);
 }
 
+.border-vla2 {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 168 95 / var(--tw-border-opacity, 1));
+}
+
 .border-e-transparent {
   border-inline-end-color: transparent;
 }
@@ -1742,6 +1783,21 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-neutral-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vla {
+  --tw-bg-opacity: 1;
+  background-color: rgb(83 207 110 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vls {
+  --tw-bg-opacity: 1;
+  background-color: rgb(139 145 151 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-50 {
@@ -1917,6 +1973,11 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .\!pl-12 {
@@ -2183,6 +2244,21 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity, 1));
+}
+
 .text-opacity-90 {
   --tw-text-opacity: 0.9;
 }
@@ -2267,6 +2343,12 @@ video {
 
 .outline-vls\/80 {
   outline-color: rgb(139 145 151 / 0.8);
+}
+
+.\!ring-0 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
 }
 
 .blur {
@@ -4161,6 +4243,19 @@ input[type='radio']:hover {
   background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-blue-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-vlp2\/40:hover {
+  background-color: rgb(232 233 235 / 0.4);
+}
+
+.hover\:bg-vlp2\/60:hover {
+  background-color: rgb(232 233 235 / 0.6);
+}
+
 .hover\:fill-vls:hover {
   fill: #8B9197;
 }
@@ -4271,6 +4366,16 @@ input[type='radio']:hover {
 .focus\:bg-vlp2:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
+}
+
+.focus\:bg-vlp3:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(211 213 214 / var(--tw-bg-opacity, 1));
+}
+
+.focus\:bg-vls2:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1));
 }
 
 .focus\:text-gray-200:focus {
@@ -4415,6 +4520,24 @@ input[type='radio']:hover {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
+.dark\:border-vda:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
+}
+
+.dark\:border-vda2:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-color: rgb(254 127 118 / var(--tw-border-opacity, 1));
+}
+
+.dark\:border-vda2\/60:is(.dark *) {
+  border-color: rgb(254 127 118 / 0.6);
+}
+
+.dark\:border-vds\/80:is(.dark *) {
+  border-color: rgb(212 212 212 / 0.8);
+}
+
 .dark\:border-t-vds2:is(.dark *) {
   --tw-border-opacity: 1;
   border-top-color: rgb(82 82 82 / var(--tw-border-opacity, 1));
@@ -4478,6 +4601,44 @@ input[type='radio']:hover {
 .dark\:bg-zinc-900:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-vda2:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 127 118 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-vda2\/80:is(.dark *) {
+  background-color: rgb(254 127 118 / 0.8);
+}
+
+.dark\:bg-vds:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(212 212 212 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-red-500:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-vds3light:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(163 163 163 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-vla:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(83 207 110 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-vda:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 160 154 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-vda2\/60:is(.dark *) {
+  background-color: rgb(254 127 118 / 0.6);
 }
 
 .dark\:text-gray-100:is(.dark *) {
@@ -4624,6 +4785,19 @@ input[type='radio']:hover {
 .dark\:hover\:bg-vdp3:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(63 63 70 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:hover\:bg-vdp3\/80:hover:is(.dark *) {
+  background-color: rgb(63 63 70 / 0.8);
+}
+
+.dark\:hover\:bg-vds3neu700\/60:hover:is(.dark *) {
+  background-color: rgb(64 64 64 / 0.6);
+}
+
+.dark\:hover\:bg-vds2:hover:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(82 82 82 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:hover\:fill-vred-300:hover:is(.dark *) {
