--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -641,10 +641,6 @@ video {
   top: -0.75rem !important;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
 .bottom-full {
   bottom: 100%;
 }
@@ -762,24 +758,8 @@ video {
   margin-bottom: 1rem;
 }
 
-.-mb-0\.5 {
-  margin-bottom: -0.125rem;
-}
-
-.-ml-0\.5 {
-  margin-left: -0.125rem;
-}
-
-.-mr-0\.5 {
-  margin-right: -0.125rem;
-}
-
 .-ms-32 {
   margin-inline-start: -8rem;
-}
-
-.-mt-0\.5 {
-  margin-top: -0.125rem;
 }
 
 .-mt-\[7px\] {
@@ -830,6 +810,10 @@ video {
   margin-left: 0.5rem;
 }
 
+.ml-3 {
+  margin-left: 0.75rem;
+}
+
 .ml-4 {
   margin-left: 1rem;
 }
@@ -874,12 +858,12 @@ video {
   margin-top: 0.5rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
+.mt-4 {
+  margin-top: 1rem;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .mt-8 {
@@ -888,10 +872,6 @@ video {
 
 .mt-auto {
   margin-top: auto;
-}
-
-.mt-4 {
-  margin-top: 1rem;
 }
 
 .block {
@@ -994,14 +974,6 @@ video {
   height: 100vh;
 }
 
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-3\.5 {
-  height: 0.875rem;
-}
-
 .max-h-80 {
   max-height: 20rem;
 }
@@ -1020,6 +992,50 @@ video {
 
 .max-h-\[calc\(80vh-200px\)\] {
   max-height: calc(80vh - 200px);
+}
+
+.max-h-72 {
+  max-height: 18rem;
+}
+
+.max-h-52 {
+  max-height: 13rem;
+}
+
+.max-h-96 {
+  max-height: 24rem;
+}
+
+.max-h-\[400px\] {
+  max-height: 400px;
+}
+
+.max-h-60 {
+  max-height: 15rem;
+}
+
+.max-h-\[70\%\] {
+  max-height: 70%;
+}
+
+.max-h-full {
+  max-height: 100%;
+}
+
+.max-h-\[60\%\] {
+  max-height: 60%;
+}
+
+.max-h-\[90vh\] {
+  max-height: 90vh;
+}
+
+.max-h-\[50vh\] {
+  max-height: 50vh;
+}
+
+.max-h-\[40vh\] {
+  max-height: 40vh;
 }
 
 .\!w-11\/12 {
@@ -1086,10 +1102,6 @@ video {
   width: 1rem;
 }
 
-.w-5 {
-  width: 1.25rem;
-}
-
 .w-52 {
   width: 13rem;
 }
@@ -1104,6 +1116,10 @@ video {
 
 .w-80 {
   width: 20rem;
+}
+
+.w-9 {
+  width: 2.25rem;
 }
 
 .w-\[10\%\] {
@@ -1122,8 +1138,8 @@ video {
   width: 30%;
 }
 
-.w-\[40\%\] {
-  width: 40%;
+.w-\[45\%\] {
+  width: 45%;
 }
 
 .w-\[5\%\] {
@@ -1175,32 +1191,28 @@ video {
   width: 100vw;
 }
 
-.w-3 {
-  width: 0.75rem;
+.w-\[cal\(100\%-10px\)\] {
+  width: cal(100%-10px);
 }
 
-.w-6 {
-  width: 1.5rem;
+.w-\[calc\(100\%-50px\)\] {
+  width: calc(100% - 50px);
 }
 
-.w-8 {
-  width: 2rem;
+.w-\[\] {
+  width: ;
 }
 
-.w-3\.5 {
-  width: 0.875rem;
-}
-
-.w-7 {
-  width: 1.75rem;
-}
-
-.w-9 {
-  width: 2.25rem;
+.w-\[20\%\] {
+  width: 20%;
 }
 
 .min-w-0 {
   min-width: 0px;
+}
+
+.max-w-12 {
+  max-width: 3rem;
 }
 
 .max-w-2xl {
@@ -1209,10 +1221,6 @@ video {
 
 .max-w-72 {
   max-width: 18rem;
-}
-
-.max-w-\[40\%\] {
-  max-width: 40%;
 }
 
 .max-w-\[5\%\] {
@@ -1271,18 +1279,8 @@ video {
   transform-origin: top;
 }
 
-.-translate-x-1\/2 {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .-translate-x-3\/4 {
   --tw-translate-x: -75%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-x-full {
-  --tw-translate-x: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1293,11 +1291,6 @@ video {
 
 .-translate-y-10 {
   --tw-translate-y: -2.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-full {
-  --tw-translate-y: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1333,11 +1326,6 @@ video {
 
 .translate-y-3 {
   --tw-translate-y: 0.75rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-full {
-  --tw-translate-y: 100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1641,6 +1629,11 @@ video {
   border-color: rgb(83 207 110 / var(--tw-border-opacity, 1));
 }
 
+.border-vla2 {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 168 95 / var(--tw-border-opacity, 1));
+}
+
 .border-vlp {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
@@ -1665,11 +1658,6 @@ video {
 
 .border-vls\/80 {
   border-color: rgb(139 145 151 / 0.8);
-}
-
-.border-vla2 {
-  --tw-border-opacity: 1;
-  border-color: rgb(75 168 95 / var(--tw-border-opacity, 1));
 }
 
 .border-e-transparent {
@@ -1705,11 +1693,6 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
-.bg-blue-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
-}
-
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
@@ -1733,16 +1716,6 @@ video {
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
-}
-
-.bg-neutral-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 229 229 / var(--tw-bg-opacity, 1));
-}
-
-.bg-red-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1));
 }
 
 .bg-red-800 {
@@ -1783,21 +1756,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-neutral-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vla {
-  --tw-bg-opacity: 1;
-  background-color: rgb(83 207 110 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vls {
-  --tw-bg-opacity: 1;
-  background-color: rgb(139 145 151 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-50 {
@@ -1975,11 +1933,6 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
 .\!pl-12 {
   padding-left: 3rem !important;
 }
@@ -2139,9 +2092,9 @@ video {
   color: rgb(37 99 235 / var(--tw-text-opacity, 1));
 }
 
-.text-gray-400 {
+.text-gray-100 {
   --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+  color: rgb(243 244 246 / var(--tw-text-opacity, 1));
 }
 
 .text-gray-600 {
@@ -2244,21 +2197,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-gray-300 {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
-}
-
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity, 1));
-}
-
-.text-gray-100 {
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity, 1));
-}
-
 .text-opacity-90 {
   --tw-text-opacity: 0.9;
 }
@@ -2343,12 +2281,6 @@ video {
 
 .outline-vls\/80 {
   outline-color: rgb(139 145 151 / 0.8);
-}
-
-.\!ring-0 {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
 }
 
 .blur {
@@ -2680,26 +2612,6 @@ input[type='number'] {
 }
 
 .table-head-style:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
-  --tw-text-opacity: 1;
-  color: rgb(212 212 212 / var(--tw-text-opacity, 1));
-}
-
-.table-head-works {
-  position: sticky;
-  top: 0px;
-  border-radius: 0.25rem;
-  --tw-bg-opacity: 1;
-  background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1));
-  font-size: 1rem;
-  line-height: 1.5rem;
-  font-weight: 500;
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.table-head-works:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
   --tw-text-opacity: 1;
@@ -4193,11 +4105,6 @@ input[type='radio']:hover {
   background-color: rgb(22 163 74 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-red-800:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(153 27 27 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:bg-red-900:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(127 29 29 / var(--tw-bg-opacity, 1));
@@ -4228,6 +4135,10 @@ input[type='radio']:hover {
   background-color: rgb(71 85 105 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-vla2\/90:hover {
+  background-color: rgb(75 168 95 / 0.9);
+}
+
 .hover\:bg-vla3:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(33 100 48 / var(--tw-bg-opacity, 1));
@@ -4241,19 +4152,6 @@ input[type='radio']:hover {
 .hover\:bg-vlp2:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-blue-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(29 78 216 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-vlp2\/40:hover {
-  background-color: rgb(232 233 235 / 0.4);
-}
-
-.hover\:bg-vlp2\/60:hover {
-  background-color: rgb(232 233 235 / 0.6);
 }
 
 .hover\:fill-vls:hover {
@@ -4339,10 +4237,6 @@ input[type='radio']:hover {
   border-color: rgb(139 145 151 / var(--tw-border-opacity, 1));
 }
 
-.focus\:border-vls\/80:focus {
-  border-color: rgb(139 145 151 / 0.8);
-}
-
 .focus\:border-vred-300:focus {
   --tw-border-opacity: 1;
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
@@ -4361,21 +4255,6 @@ input[type='radio']:hover {
 .focus\:bg-vlp:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.focus\:bg-vlp2:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
-}
-
-.focus\:bg-vlp3:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(211 213 214 / var(--tw-bg-opacity, 1));
-}
-
-.focus\:bg-vls2:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1));
 }
 
 .focus\:text-gray-200:focus {
@@ -4418,23 +4297,20 @@ input[type='radio']:hover {
   --tw-ring-color: rgb(83 207 110 / var(--tw-ring-opacity, 1));
 }
 
+.active\:scale-95:active {
+  --tw-scale-x: .95;
+  --tw-scale-y: .95;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .active\:border-vla:active {
   --tw-border-opacity: 1;
   border-color: rgb(83 207 110 / var(--tw-border-opacity, 1));
 }
 
-.active\:border-vls\/80:active {
-  border-color: rgb(139 145 151 / 0.8);
-}
-
 .active\:bg-slate-500:active {
   --tw-bg-opacity: 1;
   background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
-}
-
-.active\:bg-vlp2:active {
-  --tw-bg-opacity: 1;
-  background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:\!border:is(.dark *) {
@@ -4485,6 +4361,10 @@ input[type='radio']:hover {
   border-color: rgb(212 212 212 / 0.4);
 }
 
+.dark\:border-vds\/80:is(.dark *) {
+  border-color: rgb(212 212 212 / 0.8);
+}
+
 .dark\:border-vds2:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(82 82 82 / var(--tw-border-opacity, 1));
@@ -4511,31 +4391,9 @@ input[type='radio']:hover {
   border-color: rgb(139 145 151 / 0.4);
 }
 
-.dark\:border-vls\/80:is(.dark *) {
-  border-color: rgb(139 145 151 / 0.8);
-}
-
 .dark\:border-vred-300:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
-}
-
-.dark\:border-vda:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
-}
-
-.dark\:border-vda2:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-color: rgb(254 127 118 / var(--tw-border-opacity, 1));
-}
-
-.dark\:border-vda2\/60:is(.dark *) {
-  border-color: rgb(254 127 118 / 0.6);
-}
-
-.dark\:border-vds\/80:is(.dark *) {
-  border-color: rgb(212 212 212 / 0.8);
 }
 
 .dark\:border-t-vds2:is(.dark *) {
@@ -4573,6 +4431,10 @@ input[type='radio']:hover {
   background-color: rgb(64 64 64 / var(--tw-bg-opacity, 1));
 }
 
+.dark\:bg-vda2\/80:is(.dark *) {
+  background-color: rgb(254 127 118 / 0.8);
+}
+
 .dark\:bg-vdp:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
@@ -4583,14 +4445,19 @@ input[type='radio']:hover {
   background-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
 }
 
-.dark\:bg-vdp3:is(.dark *) {
+.dark\:bg-vds:is(.dark *) {
   --tw-bg-opacity: 1;
-  background-color: rgb(63 63 70 / var(--tw-bg-opacity, 1));
+  background-color: rgb(212 212 212 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:bg-vds2:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(82 82 82 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-vds3light:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(163 163 163 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:bg-vds3neu700:is(.dark *) {
@@ -4601,44 +4468,6 @@ input[type='radio']:hover {
 .dark\:bg-zinc-900:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-vda2:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 127 118 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-vda2\/80:is(.dark *) {
-  background-color: rgb(254 127 118 / 0.8);
-}
-
-.dark\:bg-vds:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(212 212 212 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-red-500:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-vds3light:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(163 163 163 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-vla:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(83 207 110 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-vda:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 160 154 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-vda2\/60:is(.dark *) {
-  background-color: rgb(254 127 118 / 0.6);
 }
 
 .dark\:text-gray-100:is(.dark *) {
@@ -4763,10 +4592,6 @@ input[type='radio']:hover {
   border-color: rgb(212 212 212 / var(--tw-border-opacity, 1));
 }
 
-.dark\:hover\:border-vls\/80:hover:is(.dark *) {
-  border-color: rgb(139 145 151 / 0.8);
-}
-
 .dark\:hover\:border-vred-300:hover:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
@@ -4785,14 +4610,6 @@ input[type='radio']:hover {
 .dark\:hover\:bg-vdp3:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(63 63 70 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:hover\:bg-vdp3\/80:hover:is(.dark *) {
-  background-color: rgb(63 63 70 / 0.8);
-}
-
-.dark\:hover\:bg-vds3neu700\/60:hover:is(.dark *) {
-  background-color: rgb(64 64 64 / 0.6);
 }
 
 .dark\:hover\:bg-vds2:hover:is(.dark *) {
@@ -4859,10 +4676,6 @@ input[type='radio']:hover {
   color: rgb(83 207 110 / var(--tw-text-opacity, 1));
 }
 
-.dark\:focus\:border-vls\/80:focus:is(.dark *) {
-  border-color: rgb(139 145 151 / 0.8);
-}
-
 .dark\:focus\:border-vred-300:focus:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
@@ -4890,10 +4703,6 @@ input[type='radio']:hover {
 
 .dark\:focus\:outline-vred-300:focus:is(.dark *) {
   outline-color: #FEA09A;
-}
-
-.dark\:active\:border-vls\/80:active:is(.dark *) {
-  border-color: rgb(139 145 151 / 0.8);
 }
 
 .dark\:active\:border-vred-300:active:is(.dark *) {
