--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -970,6 +970,30 @@ video {
   height: 100vh;
 }
 
+.h-\[60\%\] {
+  height: 60%;
+}
+
+.h-\[90\%\] {
+  height: 90%;
+}
+
+.h-\[85\%\] {
+  height: 85%;
+}
+
+.h-\[100\%\] {
+  height: 100%;
+}
+
+.h-\[80vh\] {
+  height: 80vh;
+}
+
+.h-\[100vh\] {
+  height: 100vh;
+}
+
 .max-h-80 {
   max-height: 20rem;
 }
@@ -1004,6 +1028,50 @@ video {
 
 .max-h-\[calc\(80vh-200px\)\] {
   max-height: calc(80vh - 200px);
+}
+
+.max-h-\[80vh\] {
+  max-height: 80vh;
+}
+
+.max-h-\[60vh\] {
+  max-height: 60vh;
+}
+
+.max-h-\[80\%\] {
+  max-height: 80%;
+}
+
+.max-h-\[70\%\] {
+  max-height: 70%;
+}
+
+.max-h-\[50\%\] {
+  max-height: 50%;
+}
+
+.max-h-\[40\%\] {
+  max-height: 40%;
+}
+
+.max-h-\[40vh\] {
+  max-height: 40vh;
+}
+
+.max-h-\[20vh\] {
+  max-height: 20vh;
+}
+
+.max-h-\[45vh\] {
+  max-height: 45vh;
+}
+
+.max-h-\[48vh\] {
+  max-height: 48vh;
+}
+
+.min-h-0 {
+  min-height: 0px;
 }
 
 .\!w-11\/12 {
@@ -1076,10 +1144,6 @@ video {
 
 .w-56 {
   width: 14rem;
-}
-
-.w-6 {
-  width: 1.5rem;
 }
 
 .w-72 {
@@ -1169,6 +1233,22 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-\[80\%\] {
+  width: 80%;
+}
+
+.w-\[950\%\] {
+  width: 950%;
+}
+
+.w-\[95\%\] {
+  width: 95%;
 }
 
 .min-w-0 {
@@ -4160,6 +4240,16 @@ input[type='radio']:hover {
   color: rgb(43 52 64 / var(--tw-text-opacity, 1));
 }
 
+.hover\:\!text-vla2:hover {
+  --tw-text-opacity: 1 !important;
+  color: rgb(75 168 95 / var(--tw-text-opacity, 1)) !important;
+}
+
+.hover\:\!text-vla:hover {
+  --tw-text-opacity: 1 !important;
+  color: rgb(83 207 110 / var(--tw-text-opacity, 1)) !important;
+}
+
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
@@ -4691,9 +4781,29 @@ input[type='radio']:hover {
   .xl\:max-w-\[60\%\] {
     max-width: 60%;
   }
+
+  .xl\:max-w-\[70\%\] {
+    max-width: 70%;
+  }
+
+  .xl\:max-w-\[80\%\] {
+    max-width: 80%;
+  }
 }
 
 @media (min-width: 1536px) {
+  .\32xl\:max-w-\[70\%\] {
+    max-width: 70%;
+  }
+
+  .\32xl\:max-w-\[60\%\] {
+    max-width: 60%;
+  }
+
+  .\32xl\:max-w-\[80\%\] {
+    max-width: 80%;
+  }
+
   .\32xl\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
