--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -681,6 +681,10 @@ video {
   top: 25%;
 }
 
+.right-4 {
+  right: 1rem;
+}
+
 .-z-50 {
   z-index: -50;
 }
@@ -870,6 +874,10 @@ video {
   margin-top: auto;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .block {
   display: block;
 }
@@ -954,6 +962,10 @@ video {
   height: 2rem;
 }
 
+.h-\[100vh\] {
+  height: 100vh;
+}
+
 .h-\[80\%\] {
   height: 80%;
 }
@@ -967,30 +979,6 @@ video {
 }
 
 .h-screen {
-  height: 100vh;
-}
-
-.h-\[60\%\] {
-  height: 60%;
-}
-
-.h-\[90\%\] {
-  height: 90%;
-}
-
-.h-\[85\%\] {
-  height: 85%;
-}
-
-.h-\[100\%\] {
-  height: 100%;
-}
-
-.h-\[80vh\] {
-  height: 80vh;
-}
-
-.h-\[100vh\] {
   height: 100vh;
 }
 
@@ -1010,8 +998,8 @@ video {
   max-height: 300px;
 }
 
-.max-h-\[50vh\] {
-  max-height: 50vh;
+.max-h-\[45vh\] {
+  max-height: 45vh;
 }
 
 .max-h-\[60\%\] {
@@ -1022,52 +1010,8 @@ video {
   max-height: 90%;
 }
 
-.max-h-\[90vh\] {
-  max-height: 90vh;
-}
-
 .max-h-\[calc\(80vh-200px\)\] {
   max-height: calc(80vh - 200px);
-}
-
-.max-h-\[80vh\] {
-  max-height: 80vh;
-}
-
-.max-h-\[60vh\] {
-  max-height: 60vh;
-}
-
-.max-h-\[80\%\] {
-  max-height: 80%;
-}
-
-.max-h-\[70\%\] {
-  max-height: 70%;
-}
-
-.max-h-\[50\%\] {
-  max-height: 50%;
-}
-
-.max-h-\[40\%\] {
-  max-height: 40%;
-}
-
-.max-h-\[40vh\] {
-  max-height: 40vh;
-}
-
-.max-h-\[20vh\] {
-  max-height: 20vh;
-}
-
-.max-h-\[45vh\] {
-  max-height: 45vh;
-}
-
-.max-h-\[48vh\] {
-  max-height: 48vh;
 }
 
 .min-h-0 {
@@ -1210,6 +1154,10 @@ video {
   width: 75%;
 }
 
+.w-\[95\%\] {
+  width: 95%;
+}
+
 .w-\[calc\(100\%-10px\)\] {
   width: calc(100% - 10px);
 }
@@ -1233,22 +1181,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-\[100\%\] {
-  width: 100%;
-}
-
-.w-\[80\%\] {
-  width: 80%;
-}
-
-.w-\[950\%\] {
-  width: 950%;
-}
-
-.w-\[95\%\] {
-  width: 95%;
 }
 
 .min-w-0 {
@@ -1289,6 +1221,26 @@ video {
 
 .max-w-xs {
   max-width: 20rem;
+}
+
+.max-w-28 {
+  max-width: 7rem;
+}
+
+.max-w-40 {
+  max-width: 10rem;
+}
+
+.max-w-48 {
+  max-width: 12rem;
+}
+
+.max-w-32 {
+  max-width: 8rem;
+}
+
+.max-w-36 {
+  max-width: 9rem;
 }
 
 .flex-1 {
@@ -1474,6 +1426,11 @@ video {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
 }
 
 .space-x-3 > :not([hidden]) ~ :not([hidden]) {
@@ -2244,6 +2201,10 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.text-vds\/80 {
+  color: rgb(212 212 212 / 0.8);
+}
+
 .text-opacity-90 {
   --tw-text-opacity: 0.9;
 }
@@ -2393,10 +2354,6 @@ video {
 
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-}
-
-.will-change-auto {
-  will-change: auto;
 }
 
 .will-change-transform {
@@ -4157,11 +4114,6 @@ input[type='radio']:hover {
   background-color: rgb(127 29 29 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-sky-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(2 132 199 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:bg-sky-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(7 89 133 / var(--tw-bg-opacity, 1));
@@ -4205,6 +4157,11 @@ input[type='radio']:hover {
   fill: #8B9197;
 }
 
+.hover\:\!text-vla:hover {
+  --tw-text-opacity: 1 !important;
+  color: rgb(83 207 110 / var(--tw-text-opacity, 1)) !important;
+}
+
 .hover\:text-blue-400:hover {
   --tw-text-opacity: 1;
   color: rgb(96 165 250 / var(--tw-text-opacity, 1));
@@ -4238,16 +4195,6 @@ input[type='radio']:hover {
 .hover\:text-vls2:hover {
   --tw-text-opacity: 1;
   color: rgb(43 52 64 / var(--tw-text-opacity, 1));
-}
-
-.hover\:\!text-vla2:hover {
-  --tw-text-opacity: 1 !important;
-  color: rgb(75 168 95 / var(--tw-text-opacity, 1)) !important;
-}
-
-.hover\:\!text-vla:hover {
-  --tw-text-opacity: 1 !important;
-  color: rgb(83 207 110 / var(--tw-text-opacity, 1)) !important;
 }
 
 .hover\:underline:hover {
@@ -4589,6 +4536,10 @@ input[type='radio']:hover {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.dark\:text-vds\/80:is(.dark *) {
+  color: rgb(212 212 212 / 0.8);
+}
+
 .dark\:underline:is(.dark *) {
   text-decoration-line: underline;
 }
@@ -4778,28 +4729,12 @@ input[type='radio']:hover {
 }
 
 @media (min-width: 1280px) {
-  .xl\:max-w-\[60\%\] {
-    max-width: 60%;
-  }
-
   .xl\:max-w-\[70\%\] {
     max-width: 70%;
-  }
-
-  .xl\:max-w-\[80\%\] {
-    max-width: 80%;
   }
 }
 
 @media (min-width: 1536px) {
-  .\32xl\:max-w-\[70\%\] {
-    max-width: 70%;
-  }
-
-  .\32xl\:max-w-\[60\%\] {
-    max-width: 60%;
-  }
-
   .\32xl\:max-w-\[80\%\] {
     max-width: 80%;
   }
