--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -661,6 +661,10 @@ video {
   right: 0.5rem;
 }
 
+.right-4 {
+  right: 1rem;
+}
+
 .start-1\/2 {
   inset-inline-start: 50%;
 }
@@ -679,10 +683,6 @@ video {
 
 .top-1\/4 {
   top: 25%;
-}
-
-.right-4 {
-  right: 1rem;
 }
 
 .-z-50 {
@@ -858,6 +858,10 @@ video {
   margin-top: 0.5rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
@@ -872,10 +876,6 @@ video {
 
 .mt-auto {
   margin-top: auto;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
 }
 
 .block {
@@ -998,12 +998,12 @@ video {
   max-height: 300px;
 }
 
-.max-h-\[45vh\] {
-  max-height: 45vh;
+.max-h-\[35vh\] {
+  max-height: 35vh;
 }
 
-.max-h-\[60\%\] {
-  max-height: 60%;
+.max-h-\[40vh\] {
+  max-height: 40vh;
 }
 
 .max-h-\[90\%\] {
@@ -1195,6 +1195,14 @@ video {
   max-width: 42rem;
 }
 
+.max-w-36 {
+  max-width: 9rem;
+}
+
+.max-w-48 {
+  max-width: 12rem;
+}
+
 .max-w-72 {
   max-width: 18rem;
 }
@@ -1221,26 +1229,6 @@ video {
 
 .max-w-xs {
   max-width: 20rem;
-}
-
-.max-w-28 {
-  max-width: 7rem;
-}
-
-.max-w-40 {
-  max-width: 10rem;
-}
-
-.max-w-48 {
-  max-width: 12rem;
-}
-
-.max-w-32 {
-  max-width: 8rem;
-}
-
-.max-w-36 {
-  max-width: 9rem;
 }
 
 .flex-1 {
@@ -2091,16 +2079,6 @@ video {
   line-height: 1.25;
 }
 
-.text-blue-600 {
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity, 1));
-}
-
-.text-gray-100 {
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity, 1));
-}
-
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity, 1));
@@ -2199,10 +2177,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-vds\/80 {
-  color: rgb(212 212 212 / 0.8);
 }
 
 .text-opacity-90 {
@@ -4317,6 +4291,14 @@ input[type='radio']:hover {
   background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
 }
 
+.disabled\:pointer-events-none:disabled {
+  pointer-events: none;
+}
+
+.disabled\:opacity-50:disabled {
+  opacity: 0.5;
+}
+
 .dark\:\!border:is(.dark *) {
   border-width: 1px !important;
 }
@@ -4534,10 +4516,6 @@ input[type='radio']:hover {
 .dark\:text-white:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.dark\:text-vds\/80:is(.dark *) {
-  color: rgb(212 212 212 / 0.8);
 }
 
 .dark\:underline:is(.dark *) {
