--- a/public/css/style.css
+++ b/public/css/style.css
@@ -612,20 +612,26 @@ input[type='radio']:hover {
   }
 }
 /* Border flash for the toasts */
+@keyframes border-flash {
+  0% {
+    box-shadow: inset 0 0 8px 3px var(--flash-color, rgba(223, 47, 47, 0.623));
+  }
+  50% {
+    box-shadow: inset 0 0 12px 5px var(--flash-color, rgb(233, 44, 44));
+  }
+  100% {
+    box-shadow: inset 0 0 6px 1px transparent;
+  }
+}
+
 .toast-border-flash {
   animation: border-flash 0.5s linear 1;
 }
-@keyframes border-flash {
-  0% {
-    border-color: var(--flash-color, rgba(219, 25, 25, 0.5));
-    border-width: 3px;
+@keyframes progress-bar {
+  from {
+    width: 100%;
   }
-  50% {
-    border-color: var(--flash-color, rgba(219, 25, 25, 1));
-    border-width: 5px;
-  }
-  100% {
-    border-color: transparent;
-    border-width: 1px;
+  to {
+    width: 0%;
   }
 }
