--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -689,6 +689,46 @@ video {
   top: 25%;
 }
 
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.\!-right-4 {
+  right: -1rem !important;
+}
+
+.\!-top-40 {
+  top: -10rem !important;
+}
+
+.\!-top-4 {
+  top: -1rem !important;
+}
+
+.\!-right-2 {
+  right: -0.5rem !important;
+}
+
+.\!-top-2 {
+  top: -0.5rem !important;
+}
+
+.bottom-0\.5 {
+  bottom: 0.125rem;
+}
+
+.right-0\.5 {
+  right: 0.125rem;
+}
+
+.left-0\.5 {
+  left: 0.125rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
 .-z-50 {
   z-index: -50;
 }
@@ -994,6 +1034,10 @@ video {
   height: 100vh;
 }
 
+.h-28 {
+  height: 7rem;
+}
+
 .max-h-80 {
   max-height: 20rem;
 }
@@ -1024,6 +1068,10 @@ video {
 
 .max-h-\[calc\(80vh-200px\)\] {
   max-height: calc(80vh - 200px);
+}
+
+.max-h-\[50vh\] {
+  max-height: 50vh;
 }
 
 .min-h-0 {
@@ -1195,6 +1243,14 @@ video {
   width: 100vw;
 }
 
+.w-64 {
+  width: 16rem;
+}
+
+.w-60 {
+  width: 15rem;
+}
+
 .min-w-0 {
   min-width: 0px;
 }
@@ -1348,6 +1404,10 @@ video {
           user-select: none;
 }
 
+.resize-none {
+  resize: none;
+}
+
 .resize {
   resize: both;
 }
@@ -1463,6 +1523,16 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.place-self-start {
+  place-self: start;
+}
+
 .\!place-self-center {
   place-self: center !important;
 }
@@ -1481,6 +1551,10 @@ video {
 
 .self-center {
   align-self: center;
+}
+
+.justify-self-start {
+  justify-self: start;
 }
 
 .justify-self-end {
@@ -1658,6 +1732,11 @@ video {
   border-color: rgb(43 52 64 / 0.2);
 }
 
+.border-yellow-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(250 204 21 / var(--tw-border-opacity, 1));
+}
+
 .border-e-transparent {
   border-inline-end-color: transparent;
 }
@@ -1774,6 +1853,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-yellow-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 240 138 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-50 {
@@ -1956,6 +2040,11 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .\!pl-12 {
   padding-left: 3rem !important;
 }
@@ -1998,6 +2087,10 @@ video {
 
 .pr-4 {
   padding-right: 1rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .text-left {
@@ -2208,6 +2301,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
 }
 
 .text-opacity-90 {
@@ -3813,21 +3911,40 @@ input[type='radio'] {
     border-color 200ms;
 }
 
+/* Light Mode */
+
 input[type='radio']:focus {
-  background-color: #777777;
-  outline-color: #777777;
+  background-color: #525252;
+  outline-color: #525252;
 }
 
 input[type='radio']:checked {
-  outline: solid 2px #ff8980;
+  outline: solid 2px #2b3440;
   outline-offset: 2px;
-  background-color: #ff8980;
-  /* Background color when checked */
+  background-color: #2b3440;
 }
 
 input[type='radio']:hover {
-  background-color: #fea09a;
-  outline-color: #fea09a;
+  background-color: #2b3440;
+  outline-color: #2b3440;
+}
+
+/* Dark Mode */
+
+.dark input[type='radio']:focus {
+  background-color: #d4d4d4;
+  outline-color: #d4d4d4;
+}
+
+.dark input[type='radio']:checked {
+  outline: solid 2px #4ba85f;
+  outline-offset: 2px;
+  background-color: #4ba85f;
+}
+
+.dark input[type='radio']:hover {
+  background-color: #4ba85f;
+  outline-color: #4ba85f;
 }
 
 /* MARK: ANIMATIONS */
@@ -4233,6 +4350,11 @@ input[type='radio']:hover {
   color: rgb(43 52 64 / var(--tw-text-opacity, 1));
 }
 
+.hover\:text-vda:hover {
+  --tw-text-opacity: 1;
+  color: rgb(254 160 154 / var(--tw-text-opacity, 1));
+}
+
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
@@ -4439,6 +4561,10 @@ input[type='radio']:hover {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
+.dark\:border-vls2\/40:is(.dark *) {
+  border-color: rgb(43 52 64 / 0.4);
+}
+
 .dark\:border-t-vds2:is(.dark *) {
   --tw-border-opacity: 1;
   border-top-color: rgb(82 82 82 / var(--tw-border-opacity, 1));
@@ -4567,6 +4693,11 @@ input[type='radio']:hover {
 .dark\:text-white:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.dark\:text-gray-400:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
 }
 
 .dark\:underline:is(.dark *) {
@@ -4712,6 +4843,11 @@ input[type='radio']:hover {
 .dark\:hover\:text-white:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.dark\:hover\:text-gray-300:hover:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
 }
 
 .dark\:hover\:placeholder-vred-300:hover:is(.dark *)::-moz-placeholder {
